Change to presentations

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </details>
 
     <details>
-        <summary>Presentations</summary>
+        <summary>Scholarly & Professional Activities</summary>
          <dl>
             <dt>August 2024</dt>
             <dd>Student advanced trauma management and skills (SATMAS): an audit and validation study<br>[Lister Hospital Academic Grand Round], Oral Presentation</dd>
