updated code to show pdf

--- a/index.html
+++ b/index.html
@@ -651,8 +651,8 @@
         function downloadCV() {
             // Create a temporary link element
             const link = document.createElement('a');
-            link.href = 'Medical CV 2.0- Oluwasemilore Adebayo.docx'; // You'll need to upload this file to your GitHub repo
-            link.download = 'Oluwasemilore_Adebayo_Medical_CV.docx';
+            link.href = 'Medical CV 2.0- Oluwasemilore Adebayo.pdf'; // You'll need to upload this file to your GitHub repo
+            link.download = 'Oluwasemilore_Adebayo_Medical_CV.pdf';
             link.style.display = 'none';
             
             // Add to DOM, click, and remove
