Bullet points to conference presentations

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 </div>
             </div>
 
-            <!-- Presentations Card -->
+ <!-- Presentations Card -->
             <div class="flip-card card-presentations" onclick="flipCard(this)">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
@@ -513,22 +513,35 @@
                     <div class="flip-card-back">
                         <div class="card-back-title">Conference Presentations</div>
                         <div class="back-content">
-                            <dl>
-                                <dt>August 2024</dt>
-                                <dd>Student advanced trauma management and skills (SATMAS): an audit and validation study<br>[Lister Hospital Academic Grand Round], Oral Presentation</dd>
+                            <div class="presentation-item">
+                                <strong>August 2024</strong>
+                                <ul>
+                                    <li>Student advanced trauma management and skills (SATMAS): an audit and validation study<br>[Lister Hospital Academic Grand Round], <em>Oral Presentation</em></li>
+                                </ul>
+                            </div>
 
-                                <dt>March 2023</dt>
-                                <dd>The Reconstruction of Mandible Defects in War Injuries: Systematic review and Meta-analysis.<br>[British Trauma Society Conference], Oral Presentation</dd>
+                            <div class="presentation-item">
+                                <strong>March 2023</strong>
+                                <ul>
+                                    <li>The Reconstruction of Mandible Defects in War Injuries: Systematic review and Meta-analysis.<br>[British Trauma Society Conference], <em>Oral Presentation</em></li>
+                                </ul>
+                            </div>
 
-                                <dt>November 2022</dt>
-                                <dd>Evaluating the Effectiveness of Virtual Reality for Arthroplasty Training in Orthopaedic Trainees: A Systematic Review<br>[Association of Surgeons in Training (ASiT) Conference], Poster Presentation</dd>
+                            <div class="presentation-item">
+                                <strong>November 2022</strong>
+                                <ul>
+                                    <li>Evaluating the Effectiveness of Virtual Reality for Arthroplasty Training in Orthopaedic Trainees: A Systematic Review<br>[Association of Surgeons in Training (ASiT) Conference], <em>Poster Presentation</em></li>
+                                    <li>Exploring the effectiveness of artificial intelligence, machine learning and deep learning in trauma triage: A systematic review and meta-analysis.<br>[British Trauma Society Conference], <em>Oral Presentation</em></li>
+                                </ul>
+                            </div>
 
-                                <dt>November 2022</dt>
-                                <dd>Exploring the effectiveness of artificial intelligence, machine learning and deep learning in trauma triage: A systematic review and meta-analysis.<br>[British Trauma Society Conference], Oral Presentation</dd>
-
-                                <dt>March 2021</dt>
-                                <dd>Evaluating the Effectiveness of Osseointegration for Traumatic Lower Limb Amputations: A Narrative Review<br>[Association of Surgeons in Training (ASiT) Conference], Oral Presentation<br>Orthopaedic Ambulatory Surgery Cancellations; Can We Avoid Them?<br>[Birmingham Surgical Symposium Undergraduate Conference], Poster Presentation</dd>
-                            </dl>
+                            <div class="presentation-item">
+                                <strong>March 2021</strong>
+                                <ul>
+                                    <li>Evaluating the Effectiveness of Osseointegration for Traumatic Lower Limb Amputations: A Narrative Review<br>[Association of Surgeons in Training (ASiT) Conference], <em>Oral Presentation</em></li>
+                                    <li>Orthopaedic Ambulatory Surgery Cancellations; Can We Avoid Them?<br>[Birmingham Surgical Symposium Undergraduate Conference], <em>Poster Presentation</em></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
